# CMakeDepsWithComponents

./: CMakeLists.txt  conanfile.py
src/: cde.cpp  cde.h
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
